@@ -5,12 +5,14 @@ import java.io.IOException;
 public class ProcessUtils {
 
   public static Process exec(String command) throws IOException {
-    return Runtime.getRuntime().exec(command);
+    ProcessBuilder processBuilder = new ProcessBuilder("bash", "-c", command);
+    processBuilder.redirectErrorStream(true);
+    return processBuilder.start();
   }
 
   public static Process exec(String command, String[] arguments) throws IOException {
     String fullCommand = command;
-    for(String argument : arguments) {
+    for (String argument : arguments) {
       fullCommand += " ";
       fullCommand += argument;
     }
